--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+## Release 2.0.0
+
+- Ported to Discord.js v14.
+- Added category for Sonic Frontiers.
+- Updated the /share command with new GIFs.
+
 ## Release 1.2.0
 
 - Updated the dependencies.
